progressBar bug fix on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -359,6 +359,8 @@ li{
   }
 
   .progressBarMain > p {
+    margin: 0;
+    padding: 0;
     position: absolute;
     color: var(--title);
     font-size: 0.6rem;
